--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "@jithinm/youtube-plugin-oc",
+  "name": "@vyamika/youtube-plugin-oc",
   "version": "1.0.0",
   "description": "YouTube plugin for OpenClaw – search channels, get transcripts, trending videos, and topic-based search",
-  "main": "index.ts",
+  "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": ["dist"],
   "openclaw": {
-    "extensions": [
-      "./index.ts"
-    ]
+    "extensions": ["./dist/index.js"]
   },
   "scripts": {
+    "build": "tsc -p tsconfig.build.json",
+    "prepublishOnly": "npm run build",
     "test": "vitest run",
     "typecheck": "tsc --noEmit"
   },
-  "keywords": [
-    "openclaw",
-    "youtube",
-    "plugin"
-  ],
+  "keywords": ["openclaw", "youtube", "plugin"],
   "license": "MIT",
   "dependencies": {
     "@sinclair/typebox": "^0.34.0"
