--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "@vyamika/youtube-plugin-oc",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "YouTube plugin for OpenClaw – search channels, get transcripts, trending videos, and topic-based search",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "openclaw": {
-    "extensions": ["./dist/index.js"]
+    "extensions": [
+      "./dist/index.js"
+    ]
   },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
@@ -15,10 +19,15 @@
     "test": "vitest run",
     "typecheck": "tsc --noEmit"
   },
-  "keywords": ["openclaw", "youtube", "plugin"],
+  "keywords": [
+    "openclaw",
+    "youtube",
+    "plugin"
+  ],
   "license": "MIT",
   "dependencies": {
-    "@sinclair/typebox": "^0.34.0"
+    "@sinclair/typebox": "^0.34.0",
+    "youtubei.js": "^16.0.1"
   },
   "devDependencies": {
     "@types/node": "^25.2.3",
