--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "@vyamika/youtube-plugin-oc",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "YouTube plugin for OpenClaw – search channels, get transcripts, trending videos, and topic-based search",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "openclaw": {
-    "extensions": ["./dist/index.js"]
+    "extensions": [
+      "./dist/index.js"
+    ]
   },
   "scripts": {
     "build": "tsc -p tsconfig.build.json && node scripts/copy-plugin-json.cjs",
@@ -15,7 +19,11 @@
     "test": "vitest run",
     "typecheck": "tsc --noEmit"
   },
-  "keywords": ["openclaw", "youtube", "plugin"],
+  "keywords": [
+    "openclaw",
+    "youtube",
+    "plugin"
+  ],
   "license": "MIT",
   "dependencies": {
     "@sinclair/typebox": "^0.34.0",
